--- a/app/src/main/res/layout/item_listing.xml
+++ b/app/src/main/res/layout/item_listing.xml
@@ -28,9 +28,9 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/sample_item_image" />
 
-        <!-- Favorite Button -->
+        <!-- Save Button (was Favorite) -->
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/btn_favorite"
+            android:id="@+id/btn_save"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_margin="8dp"
@@ -40,11 +40,32 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/iv_favorite"
+                android:id="@+id/iv_save"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_favorite_24"
+                android:src="@drawable/ic_save_24"
+                app:tint="?attr/colorPrimary" />
+        </com.google.android.material.card.MaterialCardView>
+
+        <!-- Share Button -->
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/btn_share"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="56dp"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="2dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/iv_share"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_share_24"
                 app:tint="?attr/colorPrimary" />
         </com.google.android.material.card.MaterialCardView>
 
