--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,6 +13,10 @@
         android:icon="@drawable/ic_chat_24"
         android:title="Chat" />
     <item
+        android:id="@+id/nav_my_store"
+        android:icon="@drawable/ic_store_24"
+        android:title="My Store" />
+    <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/ic_person_24"
         android:title="Profile" />
