--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -74,11 +74,14 @@
     <!-- Category related fragments -->
     <fragment
         android:id="@+id/categoryListingFragment"
-        android:name="com.example.tradeupapp.features.search.ui.CategoryListingFragment"
+        android:name="com.example.tradeupapp.features.categorylisting.CategoryListingFragment"
         android:label="Category"
-        tools:layout="@layout/fragment_category_listing">
+        tools:layout="@layout/fragment_listing">
         <argument
-            android:name="category"
+            android:name="categoryId"
+            app:argType="string" />
+        <argument
+            android:name="categoryName"
             app:argType="string" />
         <action
             android:id="@+id/action_categoryListingFragment_to_itemDetailFragment"
@@ -244,11 +247,6 @@
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
         <action
-            android:id="@+id/action_nav_profile_to_salesHistoryFragment"
-            app:destination="@id/salesHistoryFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim" />
-        <action
             android:id="@+id/action_nav_profile_to_accountPrivacyFragment"
             app:destination="@id/accountPrivacyFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
@@ -275,12 +273,6 @@
         android:label="Delete Account"
         tools:layout="@layout/fragment_delete_account">
     </fragment>
-
-    <dialog
-        android:id="@+id/dialog_account_deactivated"
-        android:name="com.example.tradeupapp.features.profile.ui.AccountDeactivatedDialogFragment"
-        android:label="Account Deactivated"
-        tools:layout="@layout/dialog_account_deactivated" />
 
     <fragment
         android:id="@+id/editProfileFragment"
@@ -548,44 +540,16 @@
             app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
 
-    <!-- Seller mode fragments -->
     <fragment
         android:id="@+id/myListingsFragment"
-        android:name="com.example.tradeupapp.features.profile.ui.MyListingsFragment"
-        android:label="My Listings"
-        tools:layout="@layout/fragment_my_listings">
+        android:name="com.example.tradeupapp.features.history.HistoryFragment"
+        android:label="History"
+        tools:layout="@layout/fragment_history">
         <action
             android:id="@+id/action_myListingsFragment_to_itemDetailFragment"
             app:destination="@id/itemDetailFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
-        <action
-            android:id="@+id/action_myListingsFragment_to_editItemFragment"
-            app:destination="@id/editItemFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim" />
-    </fragment>
-
-    <fragment
-        android:id="@+id/salesHistoryFragment"
-        android:name="com.example.tradeupapp.features.profile.ui.SalesHistoryFragment"
-        android:label="Sales History"
-        tools:layout="@layout/fragment_sales_history">
-        <action
-            android:id="@+id/action_salesHistoryFragment_to_itemDetailFragment"
-            app:destination="@id/itemDetailFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim" />
-    </fragment>
-
-    <fragment
-        android:id="@+id/editItemFragment"
-        android:name="com.example.tradeupapp.features.listing.ui.EditItemFragment"
-        android:label="Edit Listing"
-        tools:layout="@layout/fragment_edit_item">
-        <argument
-            android:name="itemId"
-            app:argType="string" />
     </fragment>
 
     <fragment
@@ -602,5 +566,32 @@
         <argument
             android:name="userId"
             app:argType="string" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_my_store"
+        android:name="com.example.tradeupapp.features.mystore.ui.MyStoreFragment"
+        android:label="My Store"
+        tools:layout="@layout/fragment_my_store" />
+
+    <fragment
+        android:id="@+id/updateItemFragment"
+        android:name="com.example.tradeupapp.features.listing.ui.UpdateItemFragment"
+        android:label="Update Listing"
+        tools:layout="@layout/fragment_add_item">
+        <argument
+            android:name="listing"
+            app:argType="com.example.tradeupapp.models.ListingModel" />
+        <argument
+            android:name="item"
+            app:argType="com.example.tradeupapp.models.ItemModel"
+            app:nullable="true" />
+        <action
+            android:id="@+id/action_updateItemFragment_to_mapPickerFragment"
+            app:destination="@id/mapPickerFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
 </navigation>
